               respected,

             • mixing of curves (e.g., regenerated first, natural
               second) led to a crash of the function, even the new
               structure was correctly specified; fixed (#61),

             • the function will not break anymore uncontrolled of both
               RF curves are of similar extension on the x-axis.

         • ‘calc_Kars2008()’

             • In some cases the calculated LxTx values of the
               simulated natural dose response curve were slightly
               underestimated and its maximum value differed from the
               individually calculated nN(ss) value. The approach to
               calculate the natural DRC was changed and now yields a
               maximum LxTx value indistinguishable from nN(ss).

             • Numeric output in the plot should now always be inside
               the plotting frame.

             • The number of digits for the numeric output in the plot
               was slightly adjusted.

         • ‘plot_FilterCombinations()’

             • Add interactive mode (‘interactive = TRUE’),

             • correct wrong visualisation of transmission windows for
               long or short pass filters,

             • fix legend error if only one filter was provided (due to
               a recent matrix behaviour change).

         • ‘plot_GrowthCurve()’

             • The function now turns ‘Inf’ into ‘NA’,

             • the argument ‘na.rm’ is defunct and should not be used
               anymore,

             • minor code modifications to handle special cases such as
               input values with a ‘data.frame’ with no error column,

             • extent examples by for test data set by Berger & Huntley
               (1989).

         • ‘plot_Historgram()’

             • The forwarded argument ‘breaks’ was not treated
               correctly (#54); fixed.

         • ‘plot_RLum()’
