@@ -34,7 +34,7 @@ A simple homogeneity test for De estimates
 For details see Galbraith (2003).
 }
 \section{Function version}{
- 0.2.2 (2017-09-02 23:29:24)
+ 0.3.0 (2017-12-15 12:15:07)
 }
 
 \examples{
@@ -45,10 +45,19 @@ data(ExampleData.DeValues, envir = environment())
 ## apply the homogeneity test
 calc_HomogeneityTest(ExampleData.DeValues$BT998)
 
+## using the data presented by Galbraith (2003)
+df <-
+ data.frame(
+   x = c(30.1, 53.8, 54.3, 29.0, 47.6, 44.2, 43.1),
+   y = c(4.8, 7.1, 6.8, 4.3, 5.2, 5.9, 3.0))
+
+calc_HomogeneityTest(df)
+
+
 } 
 
 \section{How to cite}{
-Burow, C. (2017). calc_HomogeneityTest(): Apply a simple homogeneity test after Galbraith (2003). Function version 0.2.2. In: Kreutzer, S., Burow, C., Dietze, M., Fuchs, M.C., Schmidt, C., Fischer, M., Friedrich, J. (2017). Luminescence: Comprehensive Luminescence Dating Data Analysis. R package version 0.8.0. https://CRAN.R-project.org/package=Luminescence
+Burow, C., Kreutzer, S. (2017). calc_HomogeneityTest(): Apply a simple homogeneity test after Galbraith (2003). Function version 0.3.0. In: Kreutzer, S., Burow, C., Dietze, M., Fuchs, M.C., Schmidt, C., Fischer, M., Friedrich, J. (2017). Luminescence: Comprehensive Luminescence Dating Data Analysis. R package version 0.8.0. https://CRAN.R-project.org/package=Luminescence
 }
 
 \references{
@@ -59,5 +68,6 @@ of dose obtained using OSL. Ancient TL 21, 75-77.
 \link{pchisq}
 }
 \author{
-Christoph Burow, University of Cologne (Germany)
+Christoph Burow, University of Cologne (Germany), Sebastian Kreutzer,
+IRAMAT-CRP2A, Université Bordeaux Montaigne (France)
 \cr R Luminescence Package Team}
